Fix hidden x-scrollbar

--- a/srcd/superset/assets/stylesheets/less/custom-brand.less
+++ b/srcd/superset/assets/stylesheets/less/custom-brand.less
@@ -809,14 +809,20 @@ h4.panel-title {
 
 //= Layout Adjustments
 
-.SqlEditor .SouthPane {
-  margin-top: 20px;
-
-  .tab-content {
-    margin-top: 12px;
+.SqlEditor .queryPane {
+  .gutter {
+    margin: 15px auto 7px;
   }
 
-  .ResultSetControls {
-    margin-bottom: 12px;
+  .SouthPane {
+    padding-bottom: 20px;
+
+    .tab-content {
+      margin-top: 12px;
+    }
+
+    .ResultSetControls {
+      margin-bottom: 12px;
+    }
   }
 }
